examples/k8stest/conf/EdgionPlugins/RequestRestriction/HTTPRoute_default_request-restriction.yaml
# HTTPRoute for RequestRestriction 
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: request-restriction-test-route
  namespace: edgion-default
spec:
  parentRefs:
    - name: edgion-plugins-gateway
      namespace: edgion-test
  hostnames:
    - "request-restriction.example.com"
  rules:
    # 1. Header 
    - matches:
        - path:
            type: PathPrefix
            value: /test/header-deny
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: request-restriction-header-deny
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 2. Path 
    - matches:
        - path:
            type: PathPrefix
            value: /test/path-allow
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: request-restriction-path-allow
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 3. Method 
    - matches:
        - path:
            type: PathPrefix
            value: /test/method-allow
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: request-restriction-method-allow
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 4. Header 
    - matches:
        - path:
            type: PathPrefix
            value: /test/header-required
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: request-restriction-header-required
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 5. 
    - matches:
        - path:
            type: PathPrefix
            value: /test/combined
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: request-restriction-combined
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
